--- a/Deep Neural Networks/Image recognition with CNN.ipynb
+++ b/Deep Neural Networks/Image recognition with CNN.ipynb
@@ -57,9 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\Gabriel Sze\\Anaconda3\\envs\\tensorlearn\\lib\\site-packages\\tensorflow\\python\\ops\\resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Conv2D(32, (3,3), activation = 'relu', input_shape = (28, 28, 1)),\n",
@@ -79,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,15 +99,15 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 26, 26, 32)        320       \n",
+      "conv2d (Conv2D)              (None, 26, 26, 32)        320       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 13, 13, 32)        0         \n",
+      "max_pooling2d (MaxPooling2D) (None, 13, 13, 32)        0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 5408)              0         \n",
+      "flatten (Flatten)            (None, 5408)              0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 128)               692352    \n",
+      "dense (Dense)                (None, 128)               692352    \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 10)                1290      \n",
+      "dense_1 (Dense)              (None, 10)                1290      \n",
       "=================================================================\n",
       "Total params: 693,962\n",
       "Trainable params: 693,962\n",
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,12 +133,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### noted that if i double the filter (64 x 64), time taken to train data is longer, almost twice as long"
+    "#### noted that if i double the filter (64 x 64), time taken to train data is longer, almost twice as long\n",
+    "\n",
+    "#### too many epochs may cause overfitting of training sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,17 +148,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "59968/60000 [============================>.] - ETA: 0s - loss: 0.0024 - acc: 0.9995Accuracy is above 99.8%, training will be stopped\n",
-      "60000/60000 [==============================] - 51s 852us/sample - loss: 0.0024 - acc: 0.9995\n"
+      "59968/60000 [============================>.] - ETA: 0s - loss: 0.0034 - acc: 0.9995Accuracy is above 99.8%, training will be stopped\n",
+      "60000/60000 [==============================] - 51s 845us/sample - loss: 0.0034 - acc: 0.9995\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x23d5e302c18>"
+       "<tensorflow.python.keras.callbacks.History at 0x1b58784a358>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 2s 234us/sample - loss: 14.5385 - acc: 0.0980\n"
+      "10000/10000 [==============================] - 2s 215us/sample - loss: 14.5385 - acc: 0.0980\n"
      ]
     },
     {
@@ -173,7 +185,7 @@
        "[14.538523742675782, 0.098]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
