--- a/Deep Neural Networks/Autonomous+driving+application+-+Car+detection+-+v3 (1).ipynb
+++ b/Deep Neural Networks/Autonomous+driving+application+-+Car+detection+-+v3 (1).ipynb
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -368,31 +368,31 @@
     "\n",
     "def iou(box1, box2):\n",
     "    \"\"\"Implement the intersection over union (IoU) between box1 and box2\n",
-    "    \n",
+    "    \n",
     "    Arguments:\n",
     "    box1 -- first box, list object with coordinates (x1, y1, x2, y2)\n",
-    "    box2 -- second box, list object with coordinates (x1, y1, x2, y2)\n",
-    "    \"\"\"\n",
+    "    box2 -- second box, list object with coordinates (x1, y1, x2, y2)\n",
+    "    \"\"\"\n",
     "\n",
     "    # Calculate the (y1, x1, y2, x2) coordinates of the intersection of box1 and box2. Calculate its Area.\n",
     "    ### START CODE HERE ### (≈ 5 lines)\n",
-    "    xi1 = np.maximum(box1[0], box2[0])\n",
-    "    yi1 = np.maximum(box1[1], box2[1])\n",
-    "    xi2 = np.minimum(box1[2], box2[2])\n",
-    "    yi2 = np.minimum(box1[3], box2[3])\n",
-    "    inter_area = np.abs((xi1 - xi2) * (yi1 - yi2))\n",
-    "    ### END CODE HERE ###    \n",
+    "    xi1 = max(box1[0], box2[0])\n",
+    "    yi1 = max(box1[1], box2[1])\n",
+    "    xi2 = min(box1[2], box2[2])\n",
+    "    yi2 = min(box1[3], box2[3])\n",
+    "    inter_area = max(yi2 - yi1, 0) * max(xi2 - xi1, 0)\n",
+    "    ### END CODE HERE ###    \n",
     "\n",
     "    # Calculate the Union area by using Formula: Union(A,B) = A + B - Inter(A,B)\n",
     "    ### START CODE HERE ### (≈ 3 lines)\n",
-    "    box1_area = np.abs((box1[2] - box1[0]) * (box1[3] - box1[1]))\n",
-    "    box2_area = np.abs((box2[2] - box2[0]) * (box2[3] - box2[1]))\n",
+    "    box1_area = (box1[3] - box1[1]) * (box1[2] - box1[0])\n",
+    "    box2_area = (box2[3] - box2[1]) * (box2[2] - box2[0])\n",
     "    union_area = box1_area + box2_area - inter_area\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # compute the IoU\n",
     "    ### START CODE HERE ### (≈ 1 line)\n",
-    "    iou = inter_area/union_area\n",
+    "    iou = inter_area / union_area\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return iou"
@@ -400,14 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iou = 0.142857142857\n"
+      "iou = 0.14285714285714285\n"
      ]
     }
    ],
